parser/tests/snapshots/cfg_snapshots__nested if__else statements, leading and trailing statements.snap
---
source: parser/tests/cfg_snapshots.rs
expression: "parse_cfg_from_statements(\"\n        let a = 1\n        let b = 1\n        if true {\n          let a = 1\n        } else {\n          let a = 1\n          let b = 1\n          if true {\n            let a = 1\n            let b = 1\n            let c = 1\n          } else {\n            let a = 1\n            let b = 1\n            let c = 1\n            let d = 1\n          }\n          let b = 1\n        }\n        let c = 1\n        let d = 1\n        \")"
---
digraph {
    0 [ label = "Entry" ]
    1 [ label = "Exit" ]
    2 [ label = "BasicBlock(2)" ]
    3 [ label = "BranchCondition" ]
    4 [ label = "BasicBlock(1)" ]
    5 [ label = "BasicBlock(2)" ]
    6 [ label = "BranchCondition" ]
    7 [ label = "BasicBlock(3)" ]
    8 [ label = "BasicBlock(4)" ]
    9 [ label = "BasicBlock(1)" ]
    10 [ label = "BasicBlock(2)" ]
    0 -> 2 [ label = "Normal" ]
    2 -> 3 [ label = "Normal" ]
    3 -> 4 [ label = "ConditionTrue" ]
    3 -> 5 [ label = "ConditionFalse" ]
    5 -> 6 [ label = "Normal" ]
    6 -> 7 [ label = "ConditionTrue" ]
    6 -> 8 [ label = "ConditionFalse" ]
    7 -> 9 [ label = "Normal" ]
    8 -> 9 [ label = "Normal" ]
    4 -> 10 [ label = "Normal" ]
    9 -> 10 [ label = "Normal" ]
    10 -> 1 [ label = "Normal" ]
}

