parser/tests/snapshots/cfg_snapshots__nested if__else, early return (dead code).snap
---
source: parser/tests/cfg_snapshots.rs
expression: "parse_cfg_from_statements(\"\n          if true {\n            if true {\n              return 1\n            } else {\n              return 2\n            }\n          } else {\n            if true {\n              return 1\n            } else {\n              return 2\n            }\n          }\n          let a = 1\n          let b = 1\n          let c = 1\n          \")"
---
digraph {
    0 [ label = "Entry" ]
    1 [ label = "Exit" ]
    2 [ label = "BranchCondition" ]
    3 [ label = "BranchCondition" ]
    4 [ label = "BasicBlock(1)" ]
    5 [ label = "BasicBlock(1)" ]
    6 [ label = "BranchCondition" ]
    7 [ label = "BasicBlock(1)" ]
    8 [ label = "BasicBlock(1)" ]
    9 [ label = "BasicBlock(3)" ]
    0 -> 2 [ label = "Normal" ]
    2 -> 3 [ label = "ConditionTrue" ]
    3 -> 4 [ label = "ConditionTrue" ]
    4 -> 1 [ label = "Return" ]
    3 -> 5 [ label = "ConditionFalse" ]
    5 -> 1 [ label = "Return" ]
    2 -> 6 [ label = "ConditionFalse" ]
    6 -> 7 [ label = "ConditionTrue" ]
    7 -> 1 [ label = "Return" ]
    6 -> 8 [ label = "ConditionFalse" ]
    8 -> 1 [ label = "Return" ]
}

