parser/tests/snapshots/cfg_snapshots__nested if__else-if statements, early return (dead code).snap
---
source: parser/tests/cfg_snapshots.rs
expression: "parse_cfg_from_statements(\"\n      if true {\n        if true {\n          return 5\n        } else if true {\n          return 5\n        } else {\n          if true {\n            return 5\n          } else if true {\n            return 5\n          } else {\n            let a = 1\n            return 5\n          }\n          # DEAD CODE\n          let a = 1\n        }\n      } else if true {\n        if true {\n          return 5\n        } else if true {\n          return 5\n        } else {\n          return 5\n        }\n        # DEAD CODE\n        let a = 1\n      } else {\n        if true {\n          return 5\n        } else if true {\n          return 5\n        } else {\n          return 5\n        }\n        # DEAD CODE\n        let a = 1\n      }\n      # DEAD CODE\n      let a = 1\n      let b = 1\n      let c = 1\n      \")"
---
digraph {
    0 [ label = "Entry" ]
    1 [ label = "Exit" ]
    2 [ label = "BasicBlock(0)" ]
    3 [ label = "BasicBlock(0)" ]
    4 [ label = "BasicBlock(1)" ]
    5 [ label = "BasicBlock(0)" ]
    6 [ label = "BasicBlock(1)" ]
    7 [ label = "BasicBlock(0)" ]
    8 [ label = "BasicBlock(1)" ]
    9 [ label = "BasicBlock(0)" ]
    10 [ label = "BasicBlock(1)" ]
    11 [ label = "BasicBlock(2)" ]
    12 [ label = "BasicBlock(1)" ]
    13 [ label = "BasicBlock(0)" ]
    14 [ label = "BasicBlock(0)" ]
    15 [ label = "BasicBlock(1)" ]
    16 [ label = "BasicBlock(0)" ]
    17 [ label = "BasicBlock(1)" ]
    18 [ label = "BasicBlock(1)" ]
    19 [ label = "BasicBlock(1)" ]
    20 [ label = "BasicBlock(0)" ]
    21 [ label = "BasicBlock(1)" ]
    22 [ label = "BasicBlock(0)" ]
    23 [ label = "BasicBlock(1)" ]
    24 [ label = "BasicBlock(1)" ]
    25 [ label = "BasicBlock(1)" ]
    26 [ label = "BasicBlock(3)" ]
    0 -> 2 [ label = "Normal" ]
    2 -> 3 [ label = "ConditionTrue(2)" ]
    3 -> 4 [ label = "ConditionTrue(2)" ]
    4 -> 1 [ label = "Return" ]
    3 -> 5 [ label = "ConditionFalse(2)" ]
    5 -> 6 [ label = "ConditionTrue(3)" ]
    6 -> 1 [ label = "Return" ]
    5 -> 7 [ label = "ConditionFalse(3)" ]
    7 -> 8 [ label = "ConditionTrue(2)" ]
    8 -> 1 [ label = "Return" ]
    7 -> 9 [ label = "ConditionFalse(2)" ]
    9 -> 10 [ label = "ConditionTrue(3)" ]
    10 -> 1 [ label = "Return" ]
    9 -> 11 [ label = "ConditionFalse(3)" ]
    11 -> 1 [ label = "Return" ]
    2 -> 13 [ label = "ConditionFalse(2)" ]
    13 -> 14 [ label = "ConditionTrue(3)" ]
    14 -> 15 [ label = "ConditionTrue(2)" ]
    15 -> 1 [ label = "Return" ]
    14 -> 16 [ label = "ConditionFalse(2)" ]
    16 -> 17 [ label = "ConditionTrue(3)" ]
    17 -> 1 [ label = "Return" ]
    16 -> 18 [ label = "ConditionFalse(3)" ]
    18 -> 1 [ label = "Return" ]
    13 -> 20 [ label = "ConditionFalse(3)" ]
    20 -> 21 [ label = "ConditionTrue(2)" ]
    21 -> 1 [ label = "Return" ]
    20 -> 22 [ label = "ConditionFalse(2)" ]
    22 -> 23 [ label = "ConditionTrue(3)" ]
    23 -> 1 [ label = "Return" ]
    22 -> 24 [ label = "ConditionFalse(3)" ]
    24 -> 1 [ label = "Return" ]
}

