parser/tests/snapshots/cfg_snapshots__nested if__else-if statements.snap
---
source: parser/tests/cfg_snapshots.rs
expression: "parse_cfg_from_statements(\"\n        if true {\n          let a = 1\n          if true {\n            let a = 1\n            let b = 2\n          } else if true {\n            let a = 1\n            let b = 2\n            let c = 3\n          }\n        } else if true {\n          let a = 1\n          let b = 2\n          let c = 3\n          let d = 4\n          if true {\n            let a = 1\n          } else {\n            let c = 2\n          }\n        } else {\n          if true {\n            let a = 1\n          } else if true {\n            let b = 1\n            let c = 2\n          }\n          let a = 1\n          let b = 2\n          let c = 3\n          let d = 4\n          let e = 5\n        }\n        \")"
---
digraph {
    0 [ label = "Entry" ]
    1 [ label = "Exit" ]
    2 [ label = "BranchCondition" ]
    3 [ label = "BasicBlock(1)" ]
    4 [ label = "BranchCondition" ]
    5 [ label = "BasicBlock(2)" ]
    6 [ label = "BranchCondition" ]
    7 [ label = "BasicBlock(3)" ]
    8 [ label = "BranchCondition" ]
    9 [ label = "BasicBlock(4)" ]
    10 [ label = "BranchCondition" ]
    11 [ label = "BasicBlock(1)" ]
    12 [ label = "BasicBlock(1)" ]
    13 [ label = "BranchCondition" ]
    14 [ label = "BasicBlock(1)" ]
    15 [ label = "BranchCondition" ]
    16 [ label = "BasicBlock(2)" ]
    17 [ label = "BasicBlock(5)" ]
    0 -> 2 [ label = "Normal" ]
    2 -> 3 [ label = "ConditionTrue" ]
    3 -> 4 [ label = "Normal" ]
    4 -> 5 [ label = "ConditionTrue" ]
    4 -> 6 [ label = "ConditionFalse" ]
    6 -> 7 [ label = "ConditionTrue" ]
    2 -> 8 [ label = "ConditionFalse" ]
    8 -> 9 [ label = "ConditionTrue" ]
    9 -> 10 [ label = "Normal" ]
    10 -> 11 [ label = "ConditionTrue" ]
    10 -> 12 [ label = "ConditionFalse" ]
    8 -> 13 [ label = "ConditionFalse" ]
    13 -> 14 [ label = "ConditionTrue" ]
    13 -> 15 [ label = "ConditionFalse" ]
    15 -> 16 [ label = "ConditionTrue" ]
    14 -> 17 [ label = "Normal" ]
    15 -> 17 [ label = "ConditionFalse" ]
    16 -> 17 [ label = "Normal" ]
    17 -> 1 [ label = "Normal" ]
    7 -> 1 [ label = "Normal" ]
    5 -> 1 [ label = "Normal" ]
    6 -> 1 [ label = "ConditionFalse" ]
    12 -> 1 [ label = "Normal" ]
    11 -> 1 [ label = "Normal" ]
}

